enter coffee button: user feedback DUS

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,6 @@
         completions."
     </string>
     <string name="enter_the_name_of_your_coffee">Enter the name of your coffee!</string>
+    <string name="enter_coffee">Enter</string>
 
 </resources>
