calling activity text for custom coffee

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     </string>
     <string name="enter_the_name_of_your_coffee">Enter the name of your coffee!</string>
     <string name="enter_coffee">Enter</string>
+    <string name="calling_activity_message">The calling activity was</string>
 
 </resources>
