test text formatting and click method in main activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
     <string name="enter_the_name_of_your_coffee">Enter the name of your coffee!</string>
     <string name="enter_coffee">Enter</string>
     <string name="calling_activity_message">The calling activity was</string>
+    <string name="the_chosen_coffee_was">The chosen coffee was..</string>
 
 </resources>
