touch outside button close button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,6 @@
     <string name="calling_activity_message">The calling activity was</string>
     <string name="the_chosen_coffee_was">The chosen coffee was..</string>
     <string name="customfloat">customFloat</string>
+    <string name="custom_float">custom_float</string>
 
 </resources>
