--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,13 @@
     <string name="feed_back_name">Bob</string>
     <string name="feed_back_coffee_type">Coffee Type</string>
 
+
+
+        <!--Other string resources also defined in this file… -->
+        <string name="feedbacktype1">Praise</string>
+        <string name="feedbacktype2">Gripe</string>
+        <string name="feedbacktype3">Suggestion</string>
+        <string name="feedbacktype4">Bug</string>
+
+
 </resources>
