--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,14 +20,7 @@
     <string name="feed_back_title">Feed Back Title</string>
     <string name="feed_back_name">Bob</string>
     <string name="feed_back_coffee_type">Coffee Type</string>
-
-
-
-        <!--Other string resources also defined in this file… -->
-        <string name="feedbacktype1">Praise</string>
-        <string name="feedbacktype2">Gripe</string>
-        <string name="feedbacktype3">Suggestion</string>
-        <string name="feedbacktype4">Bug</string>
+    <string name="title_activity_custom_coffee">Add Custom Coffee</string>
 
 
 </resources>
