--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="prompt_password">Password (optional)</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_email">This coffee is bad and you should feel bad</string>
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
@@ -21,6 +21,7 @@
     <string name="feed_back_name">Bob</string>
     <string name="feed_back_coffee_type">Coffee Type</string>
     <string name="title_activity_custom_coffee">Add Custom Coffee</string>
+    <string name="prompt_coffee_type">Coffee Type</string>
 
 
 </resources>
