--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in">CREATE CUSTOM NECTAR OF LIFE</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This coffee is bad and you should feel bad</string>
     <string name="error_invalid_password">This password is too short</string>
@@ -22,6 +22,7 @@
     <string name="feed_back_coffee_type">Coffee Type</string>
     <string name="title_activity_custom_coffee">Add Custom Coffee</string>
     <string name="prompt_coffee_type">Coffee Type</string>
+    <string name="prompt_coffee_place">Coffee Brand</string>
 
 
 </resources>
