number fields added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,9 @@
     <string name="title_activity_custom_coffee">Add Custom Coffee</string>
     <string name="prompt_coffee_type">Coffee Type</string>
     <string name="prompt_coffee_place">Coffee Brand</string>
+    <string name="prompt_caffiene_content">Input Caffeine Content (mg)</string>
+    <string name="prompt_size">Input Serving Size (ml)</string>
+    <string name="prompt_serving_number">Input number of servings</string>
 
 
 </resources>
